# GUI-Visual-Mem

./: .gitignore  CLAUDE.md  README.md  evaluate.py  pyproject.toml
.claude/: .nfs9fbcdd0a509b050300001097  .nfsb914577845cb590c0000765c
configs/: android_world.yaml  android_world_docker.yaml  offline_android_control.yaml  offline_multimodal_mind2web.yaml  online_mind2web.yaml  webarena_lite.yaml
configs/experiments/: exp1_baseline.yaml  exp1_baseline_v3.yaml  exp1_baseline_v4.yaml  exp1_baseline_v4_clean.yaml  exp2_in_task.yaml  exp2_in_task_v3.yaml  exp2_in_task_v4.yaml  exp2_in_task_v4_clean.yaml  exp3_visual_skill.yaml  exp3_visual_skill_v3.yaml  exp3_visual_skill_v4.yaml  exp3_visual_skill_v4_clean.yaml  exp4_both.yaml  (+7 more)
eval_adapters/: common.py
evaluation/online-mind2web-eval/: README.md  agent.py  pyproject.toml  run.py
evaluation/online-mind2web-eval/configs/: mind2web.100.jsonl  mind2web.300.jsonl
evaluation/online-mind2web-eval/syn/: __init__.py  args.py  base_explore.py  data.py  gpt.py  mind2web.py  prompts.py  tools.py  utils.py
guimemorysystem/: __init__.py  cross_task_memory.py  engine.py  images.py  online_experience.py  system.py  task_memory.py  visual_skill_memory.py  visual_skill_selector.py
policy/: __init__.py  engines.py  images.py  memory_policy.py  parsers.py  prompts.py
scripts/: run_offline_mind2web_clean.sh  run_offline_mind2web_experiments.sbatch  run_offline_mind2web_experiments_v4.sbatch  run_online_mind2web_experiments.sh
tests/: test_guimemorysystem.py  test_visual_skill_memory.py  test_visual_skill_selector.py
(+32 files in other folders)
